--- a/workspace/sbookt-bingo-front/index.html
+++ b/workspace/sbookt-bingo-front/index.html
@@ -1,13 +1,33 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="pt-BR">
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sbookt-bingo-front</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+    <!-- Título que aparece no navegador -->
+    <title>Ringo</title>
+
+    <!-- Open Graph (WhatsApp / Facebook / LinkedIn) -->
+    <meta property="og:title" content="Ringo" />
+    <meta property="og:description" content="Seu dia de sorte chegou. Jogue Ringo agora!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meuringo.com.br" />
+    <meta property="og:image" content="/ringo-icon.png" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Ringo" />
+    <meta name="twitter:description" content="Seu dia de sorte chegou. Jogue Ringo agora!" />
+    <meta name="twitter:image" content="/ringo-icon.png" />
+
+    <!-- Ícone da Aba do Navegador -->
+    <link rel="icon" type="image/png" href="/ringo-icon.png" />
+    <link rel="apple-touch-icon" href="/ringo-icon.png" />
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
