--- a/workspace/sbookt-bingo-front/index.html
+++ b/workspace/sbookt-bingo-front/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Título que aparece no navegador -->
+    <!-- Importante para garantir base correta em SPA -->
+    <base href="/" />
+
     <title>Ringo</title>
 
-    <!-- Open Graph (WhatsApp / Facebook / LinkedIn) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Ringo" />
     <meta property="og:description" content="Seu dia de sorte chegou. Jogue Ringo agora!" />
     <meta property="og:type" content="website" />
@@ -22,7 +24,6 @@
     <meta name="twitter:description" content="Seu dia de sorte chegou. Jogue Ringo agora!" />
     <meta name="twitter:image" content="/ringo-icon.png" />
 
-    <!-- Ícone da Aba do Navegador -->
     <link rel="icon" type="image/png" href="/ringo-icon.png" />
     <link rel="apple-touch-icon" href="/ringo-icon.png" />
 </head>
